# makeos

./: .gitignore  CMakeLists.txt  Makefile  README  TODO.txt  bochs.sh  build.sh  bx_enh_dbg.ini  grub.cfg  linker.ld  linkerhh.ld  makefile
efi/: .gitignore  Makefile  efi_stub.c  efi_stub.h  run.sh  uefirun.sh
include/: stdio.h  stdlib.h
kern/: idt.S  idt.c  idt.h  main.c  os.h  spinlock.c  spinlock.h
lib/: stdio.c  stdlib.c
multiboot/: 32bit-print.S  Makefile  boot.S  lgdt.S  paging.S  print.S
src/boot/: boot.asm  stage2.asm
src/boot/headers/fat12/: fat12headers.asm
src/boot/headers/fat32/: .fat32headers.asm.swp
src/boot/legacy/: boot.asm  enablea20.asm  gdt.asm  getlm.asm  print.asm  protmode.asm
src/boot/stage2/: stage2.asm  stage2.c  stage2.h
src/boot/uefi/: Makefile  clang.sh  compile.sh  compile2.sh  compile3.sh  hello.c
src/kernel/: kernel.c  kernel.h
